fix scrollbar visible on closed diary

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,8 +66,13 @@ body {
     max-width: 100%;
     height: 100%;
     overflow-x: auto;
-    overflow-y: scroll;
+    overflow-y: auto;
     position: relative;
+}
+
+.diary-open .diary-body {
+    overflow-x: auto;
+    overflow-y: scroll;
 }
 
 .diary-content {
